<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="#F7EDDE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="327dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo"/>


    <EditText
        android:id="@+id/registerFname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="15dp"
        android:inputType="text"
        android:hint=" Enter First name" />

    <EditText
        android:id="@+id/registerLname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="15dp"
        android:inputType="text"
        android:hint="Enter Last name"
         />

    <EditText
        android:id="@+id/registerAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="15dp"
        android:inputType="text"
        android:hint="Enter address"
         />

    <EditText
        android:id="@+id/registerContact"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="15dp"
        android:inputType="text"
        android:hint="Enter contact"
       />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="15dp"
        android:inputType="textEmailAddress"
        android:hint="Enter email"
        />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="15dp"
        android:inputType="textPassword"
        android:hint="Enter password"
       />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="Signup" />

</LinearLayout>